# llm-trader-python

./: .dockerignore  .env  .env.example  .gitignore  AGENTS.md  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  app.py  docker-compose.dev.yml  docker-compose.prod.yml  monitor.md  pyproject.toml  requirements.dev.txt  start.ps1  start.sh  verification.md  开发计划.md  提示词.md  详细方案.md  项目需求.md
.codex/: analyze_task.json  context-question-1.json  context-question-10.json  context-question-11.json  context-question-12.json  context-question-13.json  context-question-14.json  context-question-15.json  context-question-16.json  context-question-17.json  context-question-18.json  context-question-19.json  context-question-2.json  context-question-20.json  context-question-21.json  context-question-22.json  context-question-23.json  context-question-24.json  context-question-25.json  context-question-26.json  context-question-27.json  context-question-28.json  context-question-3.json  context-question-4.json  context-question-5.json  context-question-6.json  context-question-7.json  context-question-8.json  context-question-9.json  context-questions.json  context-scan.json  context-sufficiency.json  operations-log.md  plan_task.json  reflect_task.json  review-report.md  sequential-thinking-20251105-2.json  sequential-thinking-20251105.json  sequential-thinking-20251106-2.json  sequential-thinking-20251106-3.json  (+20 more)
alembic/: env.py  script.py.mako
config/: scheduler.prod.json
dashboard/: __init__.py  app.py  data.py
docker/: entrypoint.sh
docs/: data_store.md  (+8 more)
(+157 files in other folders)
