[tool.poetry]
name = "llm-trader"
version = "0.1.0"
description = "A股自动交易代理项目骨架"
authors = ["Codex <codex@example.com>"]
readme = "README.md"
packages = [{ include = "llm_trader", from = "src" }]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.27.2"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
duckdb = "^1.1.1"
fastapi = "^0.112.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
streamlit = "^1.38.0"
scikit-learn = "^1.5.2"
optuna = "^3.6.1"
plotly = "^5.24.1"
sqlmodel = "^0.0.16"
python-dotenv = "^1.0.1"
pendulum = "^3.0.0"
tenacity = "^8.5.0"
apscheduler = "^3.10.4"
openai = "^1.45.0"
alembic = "^1.13.2"
psycopg[binary] = "^3.2.1"
redis = "^5.0.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^5.0"
pytest-asyncio = "^0.23.7"
black = "^24.8.0"
ruff = "^0.6.3"
mypy = "^1.11.2"
respx = "^0.21.1"
pytest-mock = "^3.14.0"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "UP", "B", "C4", "DTZ", "PTH", "RET", "ARG", "PL", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
